# petanqulator

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  Tupfile  default.nix  meson.build  travis.yml
nbproject/: configurations.xml  project.xml
nbproject/private/: Default.properties  configurations.xml
old/bulletphysics/: test_bullet.cpp
run/: plot.gnu  plot.py  plot.sh
src/: Chrono.cpp  Chrono.hpp  Controller.cpp  Controller.hpp  Force.cpp  Force.hpp  Game.cpp  Game.hpp  GameObject.hpp  Object.cpp  Object.hpp  Physics.cpp  Physics.hpp  Tupfile  Utils.cpp  Utils.hpp  View.cpp  View.hpp  ViewGL.cpp  ViewGL.hpp  ViewPanel.cpp  ViewPanel.hpp  petanqulator.cpp
src/petanqulator/: Chrono.hpp  Game.cpp  Game.hpp  GameObject.cpp  GameObject.hpp  GameObject_test.hpp  Game_test.hpp  Physics.cpp  Player.cpp  Player.hpp  Player_test.hpp  Prng.cpp  Prng.hpp  Prng_test.hpp  Types.hpp  Utils.cpp  Utils.hpp
src/petanqulator_cli/: petanqulator_cli.cpp
src/petanqulator_gui/: Controller.cpp  Controller.hpp  View.cpp  View.hpp  ViewGL.cpp  ViewGL.hpp  ViewPanel.cpp  ViewPanel.hpp
src/petanqulator_test/: petanqulator_test.cpp  petanqulator_test1.cpp  petanqulator_test2.cpp  petanqulator_test3.cpp  petanqulator_test_analyse.cpp  petanqulator_test_csv.cpp
src/unittest/: GameObject_test.hpp  Game_test.hpp  Player_test.hpp  Prng_test.hpp
todo/: Calculateur.cpp  Calculateur.hpp  Ensemble.hpp  Force.cpp  Force.hpp  GlFrame.cpp  GlFrame.hpp  GlObjet.cpp  GlObjet.hpp  MainWindow.cpp  MainWindow.hpp  Objet.cpp  Objet.hpp  Tireur.cpp  Tireur.hpp  Vecteur3.cpp  Vecteur3.hpp
